<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBackdrop"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/content_desc_movie_poster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/colorAccent" />

        <ImageView
            android:id="@+id/imgMovie"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/content_desc_movie_poster"
            app:layout_constraintBottom_toBottomOf="@+id/imgBackdrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBackdrop"
            tools:src="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgBackdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgMovie"
            tools:text="@string/app_name" />


        <TextView
            android:id="@+id/text_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_release_date"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgMovie"
            app:layout_constraintTop_toBottomOf="@+id/imgBackdrop" />

        <TextView
            android:id="@+id/txtReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/open_sans"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgMovie"
            app:layout_constraintTop_toBottomOf="@+id/text_release_date"
            tools:text="5 February 2002" />

        <TextView
            android:id="@+id/text_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_overview"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgMovie" />

        <TextView
            android:id="@+id/txtOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_overview"
            tools:text="@string/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>